--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           <nav class="navigation">
             <ul class="list-nav">
               <li><a class="agency" href="index.html">Agencja</a></li>
-              <li><a class="portfolio" href="portfolio.html">Portfolio</a></li>
+              <li class="highlights"><a class="portfolio" href="portfolio.html">Portfolio</a></li>
               <li><a class="contact" href="kontakt.html">Kontakt</a></li>
             </ul>
           </nav>
@@ -92,6 +92,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Technocrack</p>
                   <p class="tool">Strona internetowa</p>
@@ -106,6 +109,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Grafika New Orlean vs Golden Star</p>
                   <p class="tool">Dizajn</p>
@@ -120,6 +126,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Restauracja Seafood</p>
                   <p class="tool">Aplikacja</p>
@@ -134,6 +143,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Projekt Prime</p>
                   <p class="tool">Marketing</p>
@@ -148,6 +160,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Projekt Boxes</p>
                   <p class="tool">Aplikacja</p>
@@ -162,6 +177,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Inspiration has no Borders</p>
                   <p class="tool">Strona internetowa</p>
@@ -176,6 +194,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Magazyn Limited Edition</p>
                   <p class="tool">Dizajn</p>
@@ -190,6 +211,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Projekt LAB</p>
                   <p class="tool">Marketing</p>
@@ -204,6 +228,9 @@
                   width="370"
                   height="294"
                 />
+                <div class="project-card-overlay">
+                <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+                </div>
                 <figcaption>
                   <p class="project-name">Growing Business</p>
                   <p class="tool">Aplikacja</p>
