--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                       </ul>
           </li>
           <li>
-          <form>
+          <form class="newsletter-form">
   <label class="submit-label"> 
       <span class="newsletter">ZAPISZ SIĘ DO NEWSLETTERA</span>
     <input class="e-mail-input" type="e-mail" name="e-mail" placeholder="E-mail"/>
@@ -460,10 +460,12 @@
     <textarea name="comment" class="textarea" placeholder="Wprowadź tekst"></textarea>
   </label>
   <div class="checkbox-form">
-    <svg class="modal-icon" width="18" height="18">
+    <div class="checkbox-sq">
+    <input class="checkbox-field" type="checkbox" name="statement" value="statement"/>
+    <svg class="modal-icon-check" width="18" height="18">
       <use href="images/icons.svg#icon-tick"></use>
     </svg>
-    <input type="checkbox" class="checkbox-field" name="statement" value="statement"/>
+    </div>
   <label class="checkbox-txt">Oświadczam iż akceptuję&nbsp<a class="statment-link" href="regulations.html">Regulamin</a> &nbspi&nbsp<a class="statment-link" href="privacypolicy.html">Politykę Prywatności</a>.</label>
           </div>
   <div  class="sumbit-btn-container">
