--- a/portfolio.html
+++ b/portfolio.html
@@ -242,7 +242,7 @@
       </div>
     </main>
 
-     <footer>
+      <footer>
             <div class="footer-container">
         <section class="footer-section">
         <ul class="footer-section-list">
@@ -287,6 +287,21 @@
                           </svg>
                         </li>
                       </ul>
+          </li>
+          <li>
+          <form class="newsletter-form">
+  <label class="submit-label"> 
+      <span class="newsletter">ZAPISZ SIĘ DO NEWSLETTERA</span>
+    <input class="e-mail-input" type="e-mail" name="e-mail" placeholder="E-mail"/>
+  
+  </label>
+<div class="submit-field">
+  <button class="submit" type="submit"><span class="submit-txt">Zapisz się</span></span></button>
+  <svg class="submit-icon" width="24" height="24">
+      <use href="images/icons.svg#icon-icon-send"></use>
+    </svg>
+    </div>
+</form>
           </li>
         </div>
       </div>
